<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/gamebreak_break"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_above="@+id/button_loadGame"
            android:text="@string/gamebreak_break"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

        <Button
            android:id="@+id/button_loadGame"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_above="@+id/gamebreak_abbrechen"
            android:text="@string/gamebreak_fortsetzen" />

        <Button
            android:id="@+id/gamebreak_abbrechen"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_centerVertical="true"
            android:text="@string/gamebreak_abbrechen" />

        <Button
            android:id="@+id/gamebreak_speichern"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/gamebreak_abbrechen"
            android:layout_marginTop="50dp"
            android:text="@string/gamebreak_speichern" />

        <Button
            android:id="@+id/gamebreak_hilfe"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:layout_below="@+id/gamebreak_speichern"
            android:text="@string/gamebreak_hilfe" />
    </LinearLayout>

</RelativeLayout>
