<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.dhbw.stuttgart.mastermind.HomeFragment">

    <Button
        android:id="@+id/button_startGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_start_game"
        android:layout_above="@+id/button_2playerGame"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp" />

    <Button
        android:id="@+id/button_2playerGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_start_2player_game"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button_loadGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_load_game"
        android:layout_below="@+id/button_2playerGame"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

</RelativeLayout>
